<resources>
    <string name="app_name">Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strNull" />
    <string name="strName">Name</string>
    <string name="strEmail">Email</string>
    <string name="strDept">Department:</string>
    <string name="strSis">SIS</string>
    <string name="strCs">CS</string>
    <string name="strBio">BIO</string>
    <string name="strOthers">Others</string>
    <string name="strMood">Your current mood:</string>
    <string name="strSubmit">Submit</string>
</resources>
